# unix_dev_course

./: README.md
03_Multifile/: Makefile  README  fun.c  prog.c
04_Text/: randomize.sh
05_Debugging/: Makefile  range.c  scenario_1.gdb  scenario_2.gdb
06_TracingFencing/: Makefile  move.c  protect_lib.c  tests.sh
07_Environmental/: Makefile.am  README.md  configure.ac  rhasher.c  tests.sh
08_Regexps/: Makefile.am  README.md  configure.ac  esub.c  tests.sh
09_Testing/: README.md  configure.ac
09_Testing/src/: libbuf.c
09_Testing/tests/: Makefile.am  clear_null_test.ts
10_I18n/: Makefile.am  README.md  guesser.c  ru.po
11_Documenting/: Doxyfile.in  Makefile.am  README.md  configure.ac  guesser.c  guesser.md  guesser.pot  ru.po
12_PatchInstall/: Makefile.am  README.md  configure.ac  guesser.c  guesser.pot  ru.po
